--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "[my-framework] build --output public"
+        "build": "vite build --output public"
     },
     "devDependencies": {
         "axios": "^1.1.2",
